# CopyDepends

./: .gitignore  LICENSE  README.md  fpmPackage.py  func.cpp  func.hpp  main.cpp  meson.build  test.cpp
other/: AppRun  copy-depends.desktop  testApp
